# blaster-firmware

./: .gitignore  CMakeLists.txt  platformio.ini
app/: CMakeLists.txt  DemoApp.h  main.cpp  test_input.cpp  test_lights.cpp
core/: Blaster.cpp  Blaster.h  CMakeLists.txt  IAudioEngine.h  IDebug.h  IInput.h  ITime.h  Platform.h  WeaponJSONLoader.cpp  WeaponJSONLoader.h  WeaponProfile.h
core/input/: ButtonTracker.cpp  IInput.cpp
core/lights/: Animation.cpp  Animation.h  DebugLights.h  ILights.h  LightEngine.cpp  LightEngine.h
core/weapons/: WeaponJSONLoader.cpp  WeaponJSONLoader.h  WeaponProfile.h
docs/: wiring.md  (+1 more)
include/platform/pc/: CMakeLists.txt  PCInput.h  PCPlatform.h
lib/audio/: CMakeLists.txt  library.json
lib/audio/include/audio/: AudioEngine.h  AudioEngineFactory.h  IAudioBackend.h
lib/audio/src/: AudioEngine.cpp
lib/basic_weapons/: BasicWeaponController.cpp  BasicWeaponController.h  BasicWeaponLoader.cpp  BasicWeaponLoader.h  BasicWeaponProfile.cpp  BasicWeaponProfile.h  CMakeLists.txt
lib/core/: Blaster.cpp  Blaster.h  CMakeLists.txt  library.json
lib/core/include/core/: Blaster.h  Platform.h
lib/core/include/core/audio/: IAudioEngine.h
lib/core/include/core/input/: IInput.h
lib/core/include/core/lights/: ILights.h
lib/core/include/core/text_resource_loader/: ITextResourceLoader.h
lib/core/include/core/weapons/: BurstFireMode.h  ChargeShotMode.h  IShootMode.h  IWeaponController.h  IWeaponLoader.h  RapidFireMode.h  ShootContext.h  ShootModeFactory.h  ShootModeType.h  SingleShotMode.h  SoundBank.h  WeaponBehaviorController.h  WeaponBehaviorLoadHelpers.h  WeaponProfile.h
lib/core/input/: ButtonTracker.h  IInput.cpp  IInput.h
lib/core/lights/: Animation.h  DebugLights.h
lib/core/src/: Blaster.cpp
lib/core/src/input/: IInput.cpp
lib/core/src/weapons/: BurstFireMode.cpp  ChargeShotMode.cpp  IWeaponLoader.cpp  RapidFireMode.cpp  ShootModeFactory.cpp  SingleShotMode.cpp  WeaponBehaviorController.cpp  WeaponBehaviorLoadHelpers.cpp
lib/core/weapons/: IWeaponLoader.cpp  WeaponJSONLoader.cpp
lib/esp8266_platform/: CMakeLists.txt  ESPPlatform.cpp  ESPPlatform.h  library.json
lib/esp8266_platform/audio/: BasicESPAudioBackend.cpp  BasicESPAudioBackend.h  ESPAudioBackendFactory.cpp  ESPAudioBackendFactory.h  ESPAudioEngine.cpp  OverlapESPAudioBackend.cpp  OverlapESPAudioBackend.h  PseudoOverlapESPAudioBackend.cpp  PseudoOverlapESPAudioBackend.h
lib/esp8266_platform/include/platform/esp8266/: ESPPlatform.h
lib/esp8266_platform/include/platform/esp8266/audio/: BasicESPAudioBackend.h  ESPAudioBackendFactory.h  ESPAudioEngine.h  IAudioBackend.h  OverlapESPAudioBackend.h  PseudoOverlapESPAudioBackend.h
lib/esp8266_platform/include/platform/esp8266/input/: ESPInput.h
lib/esp8266_platform/include/platform/esp8266/text_resource_loader/: ESPTextResourceLoader.h
lib/esp8266_platform/include/platform/esp8266/time/: ESPTime.h
lib/esp8266_platform/input/: ESPInput.cpp  ESPInput.h
lib/esp8266_platform/src/: ESPPlatform.cpp
lib/esp8266_platform/src/audio/: BasicESPAudioBackend.cpp  ESPAudioBackendFactory.cpp  ESPAudioEngine.cpp  OverlapESPAudioBackend.cpp  PseudoOverlapESPAudioBackend.cpp
lib/esp8266_platform/src/input/: ESPInput.cpp
lib/lights/: CMakeLists.txt  LightEngine.cpp  LightEngine.h  library.json
lib/lights/include/lights/: LightEngine.h
lib/lights/include/lights/animation/: Animation.h
lib/lights/src/: LightEngine.cpp
lib/lights/src/animation/: Animation.cpp
lib/pc_platform/: CMakeLists.txt  library.json
lib/pc_platform/include/platform/: CMakeLists.txt
lib/pc_platform/include/platform/pc/: PCPlatform.h
lib/pc_platform/include/platform/pc/audio/: PCAudioBackend.h
lib/pc_platform/include/platform/pc/input/: PCInput.h
lib/pc_platform/include/platform/pc/text_resource_loader/: PCTextResourceLoader.h
lib/pc_platform/include/platform/pc/weapons/: PCBasicWeaponLoader.h
lib/pc_platform/src/: PCPlatform.cpp
lib/pc_platform/src/audio/: PCAudioBackend.cpp
lib/pc_platform/src/input/: PCInput.cpp
lib/weapon_behavior/: CMakeLists.txt  library.json
lib/weapon_behavior/assets/: weapon_profiles.json
lib/weapon_behavior/include/weapon_behavior/: EventWeaponController.h  ShootContext.h  WeaponBehaviorEventHandler.h  WeaponBehaviorLoadHelpers.h  WeaponBehaviorParser.h  WeaponBehaviorTypes.h  WeaponBehaviorValidation.h
lib/weapon_behavior/src/: EventWeaponController.cpp  WeaponBehaviorEventHandler.cpp  WeaponBehaviorLoadHelpers.cpp  WeaponBehaviorParser.cpp  WeaponBehaviorValidation.cpp
platform/pc/: CMakeLists.txt  PCPlatform.h
src/: CMakeLists.txt  main.cpp
src/platform/esp8266/: ESPAudioEngine.cpp
src/tests/: AnalogLadderCalibration.cpp  ESPInputTest.cpp  StorageTest.cpp
src/tests/esp8266_platform/: StorageTest.cpp
src/tests/platform/esp8266/: ESPDumpSD.cpp  ESPInputTest.cpp
tools/weapon_builder/: README.md  pyproject.toml
tools/weapon_builder/src/weapon_builder/: __init__.py  builder.py  director.py  examples.py  model.py  session.py
tools/weapon_builder/src/weapon_builder/assets/weapons/: weapons_manifest.json
tools/weapon_builder/src/weapon_builder/assets/weapons/anakin_hurt/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/atst-chinguns-online-audio-converter/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/auto_rifle/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/basic_fart.wav/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/battle-droid-blaster.wav/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/blast-2.wav/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/blast-3.wav/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/blaster-ligero/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/blasterpistol1.wav/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/boba-fetts-blaster.wav/: behavior.json
tools/weapon_builder/src/weapon_builder/assets/weapons/burst_rifle/: behavior.json
(+95 files in other folders)
