[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weapon-behavior-builder"
version = "0.1.0"
description = "Builder/director utilities for generating weapon behavior JSON content and manifest files"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
weapon-behavior-examples = "weapon_behavior_builder.examples:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
